[package]
name = "power20"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = "2.0"
structopt = { version = "0.3", default-features = false }
tokio = { version = "1", features = ["full"] }
indicatif = "0.17.7"
colored = "2.0"